refactor(api): change the syntax to filter:operator=value
