# apps/api/src/job-posting/repository.js
@@ -24,10 +24,8 @@ const jobPostingFilterableFields = [
     'title',
     'skills',
     'employmentType',
-    'datePosted_after',
-    'datePosted_before',
-    'jobStartDate_after',
-    'jobStartDate_before',
+    'datePosted',
+    'jobStartDate',
     'validThrough',
     'hiringOrganizationName',
     'hiringOrganizationPostalCode',
